--- a/gallery.html
+++ b/gallery.html
@@ -228,10 +228,11 @@
 		<!-- Content -->
 		<div class="page-content bg-white">
 			<!-- inner page banner -->
-			<div class="page-banner ovbl-dark" style="background-image:url(assets/images/banner/banner1.jpg);">
+			<div class="page-banner"
+				style="background-image:url(assets/images/banner/WhatsApp\ Image\ 2023-01-25\ at\ 3.33.31\ PM.jpeg);">
 				<div class="container">
 					<div class="page-banner-entry">
-						<h1 class="text-white">Portfolio</h1>
+						<h1 class="text-white">Gallery</h1>
 					</div>
 				</div>
 			</div>
@@ -240,7 +241,7 @@
 				<div class="container">
 					<ul class="list-inline">
 						<li><a href="#">Home</a></li>
-						<li>Portfolio</li>
+						<li>Gallery</li>
 					</ul>
 				</div>
 			</div>
@@ -563,9 +564,7 @@
 								<p class="text-capitalize m-b20">Weekly Breaking news analysis and cutting edge advices
 									on job searching.</p>
 								<div class="subscribe-form m-b20">
-									<form class="subscription-form"
-										action="http://educhamp.themetrades.com/demo/assets/script/mailchamp.php"
-										method="post">
+									<form class="subscription-form" action="" method="post">
 										<div class="ajax-message"></div>
 										<div class="input-group">
 											<input name="email" required="required" class="form-control"
@@ -586,9 +585,9 @@
 										<h5 class="footer-title">Company</h5>
 										<ul>
 											<li><a href="/index.html">Home</a></li>
-											<li><a href="//about.html">About</a></li>
+											<li><a href="/about.html">About</a></li>
 
-											<li><a href="//contact.html">Contact</a></li>
+											<li><a href="/contact.html">Contact</a></li>
 										</ul>
 									</div>
 								</div>
@@ -598,8 +597,8 @@
 										<ul>
 											<li><a href="/login.html">Login</a></li>
 
-											<li><a href="//error.html">Gallery</a></li>
-											<li><a href="/event.html">Event</a></li>
+											<li><a href="/error-404.html">Gallery</a></li>
+											<li><a href="/error-404.html">Event</a></li>
 										</ul>
 									</div>
 								</div>
