--- a/contact.html
+++ b/contact.html
@@ -160,13 +160,13 @@
 										<h5 class="menu-adv-title">Academics</h5>
 										<ul>
 											<li><a href="/error-404.html">Admission Details</a></li>
-											<li><a href="/fee-structure.html">Fee Structure</a></li>
+											<li><a href="/error-404.html">Fee Structure</a></li>
 											<li><a href="/error-404.html">Result</a></li>
-											->
+
 										</ul>
 									</li>
 									<li class="add-menu-right">
-										<img src="assets/images/adv/adv.jpg" alt="" />
+										<img src="assets/images/adv/adv.jpg" alt="home_image" />
 									</li>
 								</ul>
 							</li>
