--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 							<form action="#">
 								<input name="search" value="" type="text" class="form-control"
 									placeholder="Type to search">
-								<span><i class="ti-search"></i></span>
+								<span> </span>
 							</form>
 							<span id="search-remove"><i class="ti-close"></i></span>
 						</div>
@@ -243,7 +243,7 @@
 									data-paddingtop="[12,12,12,12]" data-paddingright="[30,35,35,15]"
 									data-paddingbottom="[12,12,12,12]" data-paddingleft="[30,35,35,15]"
 									style="z-index: 8; white-space: nowrap; outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;background-color:var( --button-color) !important; border:0; border-radius:30px; margin-right:5px;">
-									<a href=".//contact.html">Contact Us</a>
+									<a href="/contact.html">Contact Us</a>
 								</div>
 								<!-- LAYER NR. 3 -->
 								<div class="tp-caption Newspaper-Title   tp-resizeme" id="slide-200-layer-2"
@@ -301,7 +301,7 @@
 									data-paddingtop="[12,12,12,12]" data-paddingright="[30,35,35,15]"
 									data-paddingbottom="[12,12,12,12]" data-paddingleft="[30,35,35,15]"
 									style="z-index: 8; white-space: nowrap; outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;background-color:var( --button-color) !important; border-radius:20px;">
-									<a href="//about.html">Read More</a>
+									<a href="/about.html">Read More</a>
 								</div>
 							</li>
 							<li data-index="rs-200" data-transition="parallaxhorizontal" data-slotamount="default"
@@ -341,7 +341,7 @@
 									data-paddingtop="[12,12,12,12]" data-paddingright="[30,35,35,15]"
 									data-paddingbottom="[12,12,12,12]" data-paddingleft="[30,35,35,15]"
 									style="z-index: 8; white-space: nowrap; outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer; background-color:var( --button-color) !important; border:0; border-radius:30px; margin-right:5px;">
-									<a href=".//contact.html">Contact Us</a>
+									<a href="/contact.html">Contact Us</a>
 								</div>
 								<!-- LAYER NR. 3 -->
 								<div class="tp-caption Newspaper-Title   tp-resizeme" id="slide-200-layer-2"
@@ -399,7 +399,7 @@
 									data-paddingtop="[12,12,12,12]" data-paddingright="[30,35,35,15]"
 									data-paddingbottom="[12,12,12,12]" data-paddingleft="[30,35,35,15]"
 									style="z-index: 8; white-space: nowrap; outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;background-color:var( --button-color) !important; border-radius:20px;">
-									<a href="//about.html">Read More</a>
+									<a href="/about.html">Read More</a>
 								</div>
 							</li>
 							</li>
@@ -964,119 +964,232 @@
 						</div> -->
 	</div>
 	</div>
-	<!-- Form END -->
-	<!-- <div class="section-area section-sp2">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 text-center heading-bx">
-					<h2 class="title-head m-b0 event-titls">Upcoming <span>Events</span></h2>
-					<p class="m-b0 event-titls">Upcoming Education Events To Feed Brain. </p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="upcoming-event-carousel owl-carousel owl-btn-center-lr owl-btn-1 col-12 p-lr0  m-b30">
-					<div class="item">
-						<div class="event-bx">
-							<div class="action-box">
-								<img src="assets/images/event/pic4.jpg" alt="">
-							</div>
-							<div class="info-bx d-flex">
-								<div>
-									<div class="event-time">
-										<div class="event-date">29</div>
-										<div class="event-month">October</div>
-									</div>
-								</div>
-								<div class="event-info">
-									<h4 class="event-title"><a href="#">Education Autumn Tour 2019</a>
-									</h4>
-									<ul class="media-post">
-										<li><a href="#"><i class="fa fa-clock-o"></i> 7:00am 8:00am</a>
-										</li>
-										<li><a href="#"><i class="fa fa-map-marker"></i> Berlin,
-												Germany</a>
-										</li>
-									</ul>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting
-										industry. Lorem Ipsum has been the industry's standard dummy
-										text
-										ever since the..</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="item">
-						<div class="event-bx">
-							<div class="action-box">
-								<img src="assets/images/event/pic3.jpg" alt="">
-							</div>
-							<div class="info-bx d-flex">
-								<div>
-									<div class="event-time">
-										<div class="event-date">29</div>
-										<div class="event-month">October</div>
-									</div>
-								</div>
-								<div class="event-info">
-									<h4 class="event-title"><a href="#">Education Autumn Tour 2019</a>
-									</h4>
-									<ul class="media-post">
-										<li><a href="#"><i class="fa fa-clock-o"></i> 7:00am 8:00am</a>
-										</li>
-										<li><a href="#"><i class="fa fa-map-marker"></i> Berlin,
-												Germany</a>
-										</li>
-									</ul>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting
-										industry. Lorem Ipsum has been the industry's standard dummy
-										text
-										ever since the..</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="item">
-						<div class="event-bx">
-							<div class="action-box">
-								<img src="assets/images/event/pic2.jpg" alt="">
-							</div>
-							<div class="info-bx d-flex">
-								<div>
-									<div class="event-time">
-										<div class="event-date">29</div>
-										<div class="event-month">October</div>
-									</div>
-								</div>
-								<div class="event-info">
-									<h4 class="event-title"><a href="#">Education Autumn Tour 2019</a>
-									</h4>
-									<ul class="media-post">
-										<li><a href="#"><i class="fa fa-clock-o"></i> 7:00am 8:00am</a>
-										</li>
-										<li><a href="#"><i class="fa fa-map-marker"></i> Berlin,
-												Germany</a>
-										</li>
-									</ul>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting
-										industry. Lorem Ipsum has been the industry's standard dummy
-										text
-										ever since the..</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="text-center">
-				<a href="#" class="btn btn_event">View All Event</a>
-			</div>
-		</div>
-	</div> -->
+
+	<!-- Gallery section -->
 
 	<div class="section-area section-sp2">
 		<div class="container">
-			<div class="row"></div>
+			<div class="row">
+				<div class="col-md-12 heading-bx left mission_vision">
+					<h2 class="title-head">Our School<span> Gallery </span></h2>
+					<div class="content-block">
+						<!--  Gallery -->
+
+						<div class="container">
+							<div class="feature-filters clearfix center m-b40">
+								<ul class="filters" data-toggle="buttons">
+									<li data-filter="" class="btn active">
+										<input type="radio">
+										<a href="#"><span>All</span></a>
+									</li>
+									<li data-filter="book" class="btn">
+										<input type="radio">
+										<a href="#"><span>Book</span></a>
+									</li>
+									<li data-filter="courses" class="btn">
+										<input type="radio">
+										<a href="#"><span>Courses</span></a>
+									</li>
+									<li data-filter="education" class="btn">
+										<input type="radio">
+										<a href="#"><span>Education</span></a>
+									</li>
+								</ul>
+							</div>
+							<div class="clearfix">
+								<ul id="masonry" class="ttr-gallery-listing magnific-image row">
+									<li class="action-card col-lg-3 col-md-4 col-sm-6 book">
+										<div class="ttr-box portfolio-bx">
+											<div class="ttr-media media-ov2 media-effect">
+												<a href="javascript:void(0);">
+													<img src="assets/images/portfolio/image_1.jpg" alt="">
+												</a>
+												<div class="ov-box">
+													<div class="overlay-icon align-m">
+														<a href="assets/images/portfolio/image_1.jpg"
+															class="magnific-anchor" title="Title Come Here">
+
+														</a>
+													</div>
+													<div class="portfolio-info-bx bg-primary">
+														<h4><a href="/gallery.html">Soft skills</a></h4>
+
+													</div>
+												</div>
+											</div>
+										</div>
+									</li>
+									<li class="action-card col-lg-3 col-md-4 col-sm-6 education book">
+										<div class="ttr-box portfolio-bx">
+											<div class="ttr-media media-ov2 media-effect">
+												<a href="javascript:void(0);">
+													<img src="assets/images/portfolio/image_2.jpg" alt="">
+												</a>
+												<div class="ov-box">
+													<div class="overlay-icon align-m">
+														<a href="assets/images/portfolio/image_2.jpg"
+															class="magnific-anchor" title="Title Come Here">
+
+														</a>
+													</div>
+													<div class="portfolio-info-bx bg-primary">
+														<h4><a href="/gallery.html">Soft skills</a></h4>
+
+													</div>
+												</div>
+											</div>
+										</div>
+									</li>
+									<li class="action-card col-lg-3 col-md-4 col-sm-6 courses">
+										<div class="ttr-box portfolio-bx">
+											<div class="ttr-media media-ov2 media-effect">
+												<a href="javascript:void(0);">
+													<img src="assets/images/portfolio/image_3.jpg" alt="">
+												</a>
+												<div class="ov-box">
+													<div class="overlay-icon align-m">
+														<a href="assets/images/portfolio/image_3.jpg"
+															class="magnific-anchor" title="Title Come Here">
+
+														</a>
+													</div>
+													<div class="portfolio-info-bx bg-primary">
+														<h4><a href="/gallery.html">Soft skills</a></h4>
+
+													</div>
+												</div>
+											</div>
+										</div>
+									</li>
+									<li class="action-card col-lg-3 col-md-4 col-sm-6 book education">
+										<div class="ttr-box portfolio-bx">
+											<div class="ttr-media media-ov2 media-effect">
+												<a href="javascript:void(0);">
+													<img src="assets/images/portfolio/image_4.jpg" alt="">
+												</a>
+												<div class="ov-box">
+													<div class="overlay-icon align-m">
+														<a href="assets/images/portfolio/image_4.jpg"
+															class="magnific-anchor" title="Title Come Here">
+
+														</a>
+													</div>
+													<div class="portfolio-info-bx bg-primary">
+														<h4><a href="/gallery.html">Soft skills</a></h4>
+
+													</div>
+												</div>
+											</div>
+										</div>
+									</li>
+									<li class="action-card col-lg-3 col-md-4 col-sm-6 courses">
+										<div class="ttr-box portfolio-bx">
+											<div class="ttr-media media-ov2 media-effect">
+												<a href="javascript:void(0);">
+													<img src="assets/images/portfolio/image_5.jpg" alt="">
+												</a>
+												<div class="ov-box">
+													<div class="overlay-icon align-m">
+														<a href="assets/images/portfolio/image_5.jpg"
+															class="magnific-anchor" title="Title Come Here">
+
+														</a>
+													</div>
+													<div class="portfolio-info-bx bg-primary">
+														<h4><a href="/gallery.html">Soft skills</a></h4>
+
+													</div>
+												</div>
+											</div>
+										</div>
+									</li>
+									<li class="action-card col-lg-3 col-md-4 col-sm-6 education">
+										<div class="ttr-box portfolio-bx">
+											<div class="ttr-media media-ov2 media-effect">
+												<a href="javascript:void(0);">
+													<img src="assets/images/portfolio/image_6.jpg" alt="">
+												</a>
+												<div class="ov-box">
+													<div class="overlay-icon align-m">
+														<a href="assets/images/portfolio/image_6.jpg"
+															class="magnific-anchor" title="Title Come Here">
+
+														</a>
+													</div>
+													<div class="portfolio-info-bx bg-primary">
+														<h4><a href="/gallery.html">Soft skills</a></h4>
+
+													</div>
+												</div>
+											</div>
+										</div>
+									</li>
+									<li class="action-card col-lg-3 col-md-4 col-sm-6 book">
+										<div class="ttr-box portfolio-bx">
+											<div class="ttr-media media-ov2 media-effect">
+												<a href="javascript:void(0);">
+													<img src="assets/images/portfolio/image_7.jpg" alt="">
+												</a>
+												<div class="ov-box">
+													<div class="overlay-icon align-m">
+														<a href="assets/images/portfolio/image_7.jpg"
+															class="magnific-anchor" title="Title Come Here">
+
+														</a>
+													</div>
+													<div class="portfolio-info-bx bg-primary">
+														<h4><a href="/gallery.html">Soft skills</a></h4>
+
+													</div>
+												</div>
+											</div>
+										</div>
+									</li>
+									<li class="action-card col-lg-3 col-md-4 col-sm-6 courses">
+										<div class="ttr-box portfolio-bx">
+											<div class="ttr-media media-ov2 media-effect">
+												<a href="javascript:void(0);">
+													<img src="assets/images/portfolio/image_8.jpg" alt="">
+												</a>
+												<div class="ov-box">
+													<div class="overlay-icon align-m">
+														<a href="assets/images/portfolio/image_8.jpg"
+															class="magnific-anchor" title="Title Come Here">
+
+														</a>
+													</div>
+													<div class="portfolio-info-bx bg-primary">
+														<h4><a href="/gallery.html">Soft skills</a></h4>
+
+													</div>
+												</div>
+											</div>
+										</div>
+									</li>
+
+
+
+								</ul>
+								<div class="text-center">
+									<a href="/gallery.html" class="btn radius-xl">View More</a>
+
+								</div>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
 		</div>
+	</div>
+	<style>
+		@media (min-width: 992px) and (max-width: 1199px) {
+			.ov-box img {
+				height: 0px;
+				width: 0px;
+			}
+		}
+	</style>
 	</div>
 
 	</div>
@@ -1116,8 +1229,7 @@
 								advices
 								on job searching.</p>
 							<div class="subscribe-form m-b20">
-								<form class="subscription-form" action="https://wizardof-oz.github.io/php/"
-									method="post">
+								<form class="subscription-form" action="" method="post">
 									<div class="ajax-message"></div>
 									<div class="input-group">
 										<input name="email" required="required" class="form-control"
@@ -1138,9 +1250,8 @@
 									<h5 class="footer-title">Company</h5>
 									<ul>
 										<li><a href="/index.html">Home</a></li>
-										<li><a href="//about.html">About</a></li>
-										<li><a href="/faq-1.html">FAQs</a></li>
-										<li><a href="//contact.html">Contact</a></li>
+										<li><a href="/about.html">About</a></li>
+										<li><a href="/contact.html">Contact</a></li>
 									</ul>
 								</div>
 							</div>
@@ -1150,8 +1261,8 @@
 									<ul>
 										<li><a href="/login.html">Login</a></li>
 
-										<li><a href="//error.html">Gallery</a></li>
-										<li><a href="/event.html">Event</a></li>
+										<li><a href="/error.html">Gallery</a></li>
+										<li><a href="/error-404.html">Event</a></li>
 									</ul>
 								</div>
 							</div>
