fixed some error

--- a/index.html
+++ b/index.html
@@ -643,8 +643,8 @@
 			</div>
 
 			<!-- Facilites  -->
-			<div class="section-area section-sp1 ovpr-dark bg-fix online-cours"
-				style="background-image:url(assets/images/banner/5th.jpeg)">
+			<div class="section-area section-sp1 bg-fix online-cours"
+				style="background-image:url(assets/images/banner/5th.jpeg);">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12 text-center text-white">
@@ -702,38 +702,8 @@
 														</div>
 													</div>
 												</div>
-												<div class="gdlr-core-pbf-element">
-													<div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
-														style="padding-bottom: 15px ;">
-														<div class="gdlr-core-title-item-left-icon"
-															style="margin: 10px 10px 0px 0px;font-size: 15px ;"><i
-																class="fa fa-star-half-empty"
-																style="color: #ffffff ;"></i></div>
-														<div class="gdlr-core-title-item-left-icon-wrap">
-															<div class="gdlr-core-title-item-title-wrap clearfix">
-																<h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
-																	style="font-size: 15px ;font-weight: 600 ;letter-spacing: 0px ;line-height: 3 ;text-transform: none ;color: ##fff ;">
-																	Music Room</h3>
-															</div>
-														</div>
-													</div>
-												</div>
-												<div class="gdlr-core-pbf-element">
-													<div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
-														style="padding-bottom: 15px ;">
-														<div class="gdlr-core-title-item-left-icon"
-															style="margin: 10px 10px 0px 0px;font-size: 15px ;"><i
-																class="fa fa-star-half-empty"
-																style="color: #ffffff ;"></i></div>
-														<div class="gdlr-core-title-item-left-icon-wrap">
-															<div class="gdlr-core-title-item-title-wrap clearfix">
-																<h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
-																	style="font-size: 15px ;font-weight: 600 ;letter-spacing: 0px ;line-height: 3 ;text-transform: none ;color: ##fff ;">
-																	Digital Class Room</h3>
-															</div>
-														</div>
-													</div>
-												</div>
+
+
 											</div>
 										</div>
 									</div>
@@ -756,38 +726,8 @@
 														</div>
 													</div>
 												</div>
-												<div class="gdlr-core-pbf-element">
-													<div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
-														style="padding-bottom: 15px ;">
-														<div class="gdlr-core-title-item-left-icon"
-															style="margin: 10px 10px 0px 0px;font-size: 15px ;"><i
-																class="fa fa-star-half-empty"
-																style="color: #ffffff ;"></i></div>
-														<div class="gdlr-core-title-item-left-icon-wrap">
-															<div class="gdlr-core-title-item-title-wrap clearfix">
-																<h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
-																	style="font-size: 15px ;font-weight: 600 ;line-height: 3 ;text-transform: none ;color: ##fff ;">
-																	Lawn Tennis Court</h3>
-															</div>
-														</div>
-													</div>
-												</div>
-												<div class="gdlr-core-pbf-element">
-													<div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
-														style="padding-bottom: 15px ;">
-														<div class="gdlr-core-title-item-left-icon"
-															style="margin: 10px 10px 0px 0px;font-size: 15px ;"><i
-																class="fa fa-star-half-empty"
-																style="color: #ffffff ;"></i></div>
-														<div class="gdlr-core-title-item-left-icon-wrap">
-															<div class="gdlr-core-title-item-title-wrap clearfix">
-																<h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
-																	style="font-size: 15px ;font-weight: 600 ;line-height: 3 ;text-transform: none ;color: ##fff ;">
-																	Art &amp; Craft Centre</h3>
-															</div>
-														</div>
-													</div>
-												</div>
+
+
 												<div class="gdlr-core-pbf-element">
 													<div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
 														style="padding-bottom: 15px ;">
@@ -810,22 +750,7 @@
 									<div class="gdlr-core-pbf-column gdlr-core-column-15">
 										<div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
 											<div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
-												<div class="gdlr-core-pbf-element">
-													<div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
-														style="padding-bottom: 15px ;">
-														<div class="gdlr-core-title-item-left-icon"
-															style="margin: 10px 10px 0px 0px;font-size: 15px ;"><i
-																class="fa fa-star-half-empty"
-																style="color: #ffffff ;"></i></div>
-														<div class="gdlr-core-title-item-left-icon-wrap">
-															<div class="gdlr-core-title-item-title-wrap clearfix">
-																<h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
-																	style="font-size: 15px ;font-weight: 600 ;line-height: 3 ;text-transform: none ;color: ##fff ;">
-																	Swimming Pool</h3>
-															</div>
-														</div>
-													</div>
-												</div>
+
 												<div class="gdlr-core-pbf-element">
 													<div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
 														style="padding-bottom: 15px ;">
@@ -864,38 +789,8 @@
 									<div class="gdlr-core-pbf-column gdlr-core-column-15">
 										<div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
 											<div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
-												<div class="gdlr-core-pbf-element">
-													<div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
-														style="padding-bottom: 15px ;">
-														<div class="gdlr-core-title-item-left-icon"
-															style="margin: 10px 10px 0px 0px;font-size: 15px ;"><i
-																class="fa fa-star-half-empty"
-																style="color: #ffffff ;"></i></div>
-														<div class="gdlr-core-title-item-left-icon-wrap">
-															<div class="gdlr-core-title-item-title-wrap clearfix">
-																<h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
-																	style="font-size: 15px ;font-weight: 600 ;line-height: 3 ;text-transform: none ;color: ##fff ;">
-																	Table Tennis Hall</h3>
-															</div>
-														</div>
-													</div>
-												</div>
-												<div class="gdlr-core-pbf-element">
-													<div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
-														style="padding-bottom: 15px ;">
-														<div class="gdlr-core-title-item-left-icon"
-															style="margin: 10px 10px 0px 0px;font-size: 15px ;"><i
-																class="fa fa-star-half-empty"
-																style="color: #ffffff ;"></i></div>
-														<div class="gdlr-core-title-item-left-icon-wrap">
-															<div class="gdlr-core-title-item-title-wrap clearfix">
-																<h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
-																	style="font-size: 15px ;font-weight: 600 ;line-height: 3 ;text-transform: none ;color: ##fff ;">
-																	Dance Hall</h3>
-															</div>
-														</div>
-													</div>
-												</div>
+
+
 												<div class="gdlr-core-pbf-element">
 													<div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
 														style="padding-bottom: 15px ;">
@@ -908,6 +803,22 @@
 																<h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
 																	style="font-size: 15px ;font-weight: 600 ;line-height: 3 ;text-transform: none ;color: ##fff ;">
 																	IT LAB</h3>
+															</div>
+														</div>
+													</div>
+												</div>
+												<div class="gdlr-core-pbf-element">
+													<div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
+														style="padding-bottom: 15px ;">
+														<div class="gdlr-core-title-item-left-icon"
+															style="margin: 10px 10px 0px 0px;font-size: 15px ;"><i
+																class="fa fa-star-half-empty"
+																style="color: #ffffff ;"></i></div>
+														<div class="gdlr-core-title-item-left-icon-wrap">
+															<div class="gdlr-core-title-item-title-wrap clearfix">
+																<h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
+																	style="font-size: 15px ;font-weight: 600 ;letter-spacing: 0px ;line-height: 3 ;text-transform: none ;color: ##fff ;">
+																	Music Room</h3>
 															</div>
 														</div>
 													</div>
@@ -1007,8 +918,8 @@
 												<div class="ov-box">
 													<div class="overlay-icon align-m">
 														<a href="assets/images/portfolio/image_1.jpg"
-															class="magnific-anchor" title="Title Come Here">
-
+															class="magnific-anchor">
+															<i class="ri-image-2-line"></i>
 														</a>
 													</div>
 													<div class="portfolio-info-bx bg-primary">
@@ -1029,7 +940,7 @@
 													<div class="overlay-icon align-m">
 														<a href="assets/images/portfolio/image_2.jpg"
 															class="magnific-anchor" title="Title Come Here">
-
+															<i class="ri-image-2-line"></i>
 														</a>
 													</div>
 													<div class="portfolio-info-bx bg-primary">
@@ -1050,7 +961,7 @@
 													<div class="overlay-icon align-m">
 														<a href="assets/images/portfolio/image_3.jpg"
 															class="magnific-anchor" title="Title Come Here">
-
+															<i class="ri-image-2-line"></i>
 														</a>
 													</div>
 													<div class="portfolio-info-bx bg-primary">
@@ -1071,7 +982,7 @@
 													<div class="overlay-icon align-m">
 														<a href="assets/images/portfolio/image_4.jpg"
 															class="magnific-anchor" title="Title Come Here">
-
+															<i class="ri-image-2-line"></i>
 														</a>
 													</div>
 													<div class="portfolio-info-bx bg-primary">
@@ -1092,7 +1003,7 @@
 													<div class="overlay-icon align-m">
 														<a href="assets/images/portfolio/image_5.jpg"
 															class="magnific-anchor" title="Title Come Here">
-
+															<i class="ri-image-2-line"></i>
 														</a>
 													</div>
 													<div class="portfolio-info-bx bg-primary">
@@ -1113,7 +1024,7 @@
 													<div class="overlay-icon align-m">
 														<a href="assets/images/portfolio/image_6.jpg"
 															class="magnific-anchor" title="Title Come Here">
-
+															<i class="ri-image-2-line"></i>
 														</a>
 													</div>
 													<div class="portfolio-info-bx bg-primary">
@@ -1134,7 +1045,7 @@
 													<div class="overlay-icon align-m">
 														<a href="assets/images/portfolio/image_7.jpg"
 															class="magnific-anchor" title="Title Come Here">
-
+															<i class="ri-image-2-line"></i>
 														</a>
 													</div>
 													<div class="portfolio-info-bx bg-primary">
@@ -1155,7 +1066,7 @@
 													<div class="overlay-icon align-m">
 														<a href="assets/images/portfolio/image_8.jpg"
 															class="magnific-anchor" title="Title Come Here">
-
+															<i class="ri-image-2-line"></i>
 														</a>
 													</div>
 													<div class="portfolio-info-bx bg-primary">
