--- a/gallery.html
+++ b/gallery.html
@@ -20,8 +20,8 @@
 	<meta name="format-detection" content="telephone=no">
 
 	<!-- FAVICONS ICON ============================================= -->
-	<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
-	<link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
+	<link rel="icon" href="assets/images/icon/favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" type="image/x-icon" href="assets/images/icon/favicon.png" />
 
 	<!-- PAGE TITLE HERE ============================================= -->
 	<title>Fatima Convent Senior Secondary</title>
@@ -36,16 +36,24 @@
 
 	<!-- All PLUGINS CSS ============================================= -->
 	<link rel="stylesheet" type="text/css" href="assets/css/assets.css">
-
+	<link href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css" rel="stylesheet">
 	<!-- TYPOGRAPHY ============================================= -->
 	<link rel="stylesheet" type="text/css" href="assets/css/typography.css">
 
 	<!-- SHORTCODES ============================================= -->
+
 	<link rel="stylesheet" type="text/css" href="assets/css/shortcodes/shortcodes.css">
 
 	<!-- STYLESHEETS ============================================= -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link class="skin" rel="stylesheet" type="text/css" href="assets/css/color/color-1.css">
+
+	<style>
+		html.body {
+			overflow-x: hidden;
+		}
+	</style>
+
 
 </head>
 
@@ -83,9 +91,11 @@
 					<div class="container clearfix">
 						<!-- Header Logo ==== -->
 						<div class="menu-logo">
-							<a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt=""></a>
-							<a href="index.html"><img src="assets/images/school_logo_White_edited-removebg-preview.png"
-									alt=""></a>
+							<a href="index.html"><img src="assets/images/icon/school__logo-removebg-preview.png"
+									alt="schoollogo"></a>
+							<a href="index.html"><img
+									src="assets/images/icon/school_logo_White_edited-removebg-preview.png" alt="logo"
+									class="logo-width"></a>
 						</div>
 						<!-- Mobile Nav Button ==== -->
 						<button class="navbar-toggler collapsed menuicon justify-content-end" type="button"
@@ -95,32 +105,12 @@
 							<span></span>
 							<span></span>
 						</button>
-						<!-- Author Nav ==== -->
-						<div class="secondary-menu">
-							<div class="secondary-inner">
-								<ul>
-									<li><a href="javascript:;" class="btn-link"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="javascript:;" class="btn-link"><i class="fa fa-instagram"></i></a></li>
-									<!-- Search Button ==== -->
-									<li class="search-btn"><button id="quik-search-btn" type="button"
-											class="btn-link"><i class="fa fa-search"></i></button></li>
-								</ul>
-							</div>
-						</div>
-						<!-- Search Box ==== -->
-						<div class="nav-search-bar">
-							<form action="#">
-								<input name="search" value="" type="text" class="form-control"
-									placeholder="Type to search">
-								<span><i class="ti-search"></i></span>
-							</form>
-							<span id="search-remove"><i class="ti-close"></i></span>
-						</div>
 						<!-- Navigation Menu ==== -->
 						<div class="menu-links navbar-collapse collapse justify-content-start" id="menuDropdown">
 							<div class="menu-logo">
 								<a href="index.html"><img
-										src="assets/images/school_logo_White_edited-removebg-preview.png" alt=""></a>
+										src="assets/images/school_logo_White_edited-removebg-preview.png"
+										alt="school_logo_white"></a>
 							</div>
 							<ul class="nav navbar-nav">
 								<li><a href="/index.html">Home</a>
@@ -130,7 +120,7 @@
 									<ul class="sub-menu">
 										<li><a href="/about.html">About</a>
 										</li>
-										<li><a href="event.html">Event</a></li>
+										<li><a href="/error-404.html">Event</a></li>
 										<!-- <li><a href="javascript:;">FAQ's<i class="fa fa-angle-right"></i></a> -->
 										<!-- <ul class="sub-menu">
 											<li><a href="faq-1.html">FAQ's 1</a></li>
@@ -139,7 +129,7 @@
 										<!-- </li> -->
 										<li><a href="/contact.html">Contact Us</a>
 										</li>
-										<li class="active"><a href="//error.html">Gallery</a></li>
+										<li class="active"><a href="/gallery.html">Gallery</a></li>
 
 										<!-- <li><a href="error-404.html">404 Page</a></li> -->
 									</ul>
@@ -150,15 +140,15 @@
 										<li class="add-menu-left">
 											<h5 class="menu-adv-title">Academics</h5>
 											<ul>
-												<li><a href="courses.html">Admission Details</a></li>
-												<li><a href="/fee-structure.html">Fee Structure</a></li>
-												<li><a href="profile.html">Result</a></li>
+												<li><a href="/error-404.html">Admission Details</a></li>
+												<li><a href="/error-404.html">Fee Structure</a></li>
+												<li><a href="/error-404.html">Result</a></li>
 												<!-- <li><a href="event.html">Upcoming Event</a></li>
 											<li><a href="membership.html">Membership</a></li> -->
 											</ul>
 										</li>
 										<li class="add-menu-right">
-											<img src="assets/images/adv/adv.jpg" alt="" />
+											<img src="assets/images/adv/adv.jpg" alt="school pic" />
 										</li>
 									</ul>
 								</li>
@@ -178,12 +168,12 @@
 											<h5 class="menu-adv-title">School Administration</h5>
 										</li>
 
-										<li><a href="/">School Committee</a></li>
-										<li><a href="/">Staff Details</a></li>
-										<li><a href="/">Staff Vacancy</a></li>
-										<li><a href="/">Review</a></li>
-										<li><a href="/">Teacher Profile</a></li>
-										<li><a href="/">User Profile</a></li>
+										<li><a href="/error-404.html">School Committee</a></li>
+										<li><a href="/error-404.html">Staff Details</a></li>
+										<li><a href="/error-404.html">Staff Vacancy</a></li>
+										<li><a href="/error-404.html">Review</a></li>
+										<li><a href="/error-404.html">Teacher Profile</a></li>
+										<li><a href="/error-404.html">User Profile</a></li>
 
 									</ul>
 								</li>
@@ -283,7 +273,7 @@
 												<div class="overlay-icon align-m">
 													<a href="assets/images/portfolio/image_1.jpg"
 														class="magnific-anchor" title="Title Come Here">
-														<i class="ti-search"></i>
+														<i class="ri-image-2-line"></i>
 													</a>
 												</div>
 												<div class="portfolio-info-bx bg-primary">
@@ -304,7 +294,7 @@
 												<div class="overlay-icon align-m">
 													<a href="assets/images/portfolio/image_2.jpg"
 														class="magnific-anchor" title="Title Come Here">
-														<i class="ti-search"></i>
+														<i class="ri-image-2-line"></i>
 													</a>
 												</div>
 												<div class="portfolio-info-bx bg-primary">
@@ -325,7 +315,7 @@
 												<div class="overlay-icon align-m">
 													<a href="assets/images/portfolio/image_3.jpg"
 														class="magnific-anchor" title="Title Come Here">
-														<i class="ti-search"></i>
+														<i class="ri-image-2-line"></i>
 													</a>
 												</div>
 												<div class="portfolio-info-bx bg-primary">
@@ -346,7 +336,7 @@
 												<div class="overlay-icon align-m">
 													<a href="assets/images/portfolio/image_4.jpg"
 														class="magnific-anchor" title="Title Come Here">
-														<i class="ti-search"></i>
+														<i class="ri-image-2-line"></i>
 													</a>
 												</div>
 												<div class="portfolio-info-bx bg-primary">
@@ -367,7 +357,7 @@
 												<div class="overlay-icon align-m">
 													<a href="assets/images/portfolio/image_5.jpg"
 														class="magnific-anchor" title="Title Come Here">
-														<i class="ti-search"></i>
+														<i class="ri-image-2-line"></i>
 													</a>
 												</div>
 												<div class="portfolio-info-bx bg-primary">
@@ -388,7 +378,7 @@
 												<div class="overlay-icon align-m">
 													<a href="assets/images/portfolio/image_6.jpg"
 														class="magnific-anchor" title="Title Come Here">
-														<i class="ti-search"></i>
+														<i class="ri-image-2-line"></i>
 													</a>
 												</div>
 												<div class="portfolio-info-bx bg-primary">
@@ -409,7 +399,7 @@
 												<div class="overlay-icon align-m">
 													<a href="assets/images/portfolio/image_7.jpg"
 														class="magnific-anchor" title="Title Come Here">
-														<i class="ti-search"></i>
+														<i class="ri-image-2-line"></i>
 													</a>
 												</div>
 												<div class="portfolio-info-bx bg-primary">
@@ -430,7 +420,7 @@
 												<div class="overlay-icon align-m">
 													<a href="assets/images/portfolio/image_8.jpg"
 														class="magnific-anchor" title="Title Come Here">
-														<i class="ti-search"></i>
+														<i class="ri-image-2-line"></i>
 													</a>
 												</div>
 												<div class="portfolio-info-bx bg-primary">
@@ -451,7 +441,7 @@
 												<div class="overlay-icon align-m">
 													<a href="assets/images/portfolio/image_9.jpg"
 														class="magnific-anchor" title="Title Come Here">
-														<i class="ti-search"></i>
+														<i class="ri-image-2-line"></i>
 													</a>
 												</div>
 												<div class="portfolio-info-bx bg-primary">
@@ -472,7 +462,7 @@
 												<div class="overlay-icon align-m">
 													<a href="assets/images/portfolio/image_10.jpg"
 														class="magnific-anchor" title="Title Come Here">
-														<i class="ti-search"></i>
+														<i class="ri-image-2-line"></i>
 													</a>
 												</div>
 												<div class="portfolio-info-bx bg-primary">
@@ -493,7 +483,7 @@
 												<div class="overlay-icon align-m">
 													<a href="assets/images/portfolio/image_11.jpg"
 														class="magnific-anchor" title="Title Come Here">
-														<i class="ti-search"></i>
+														<i class="ri-image-2-line"></i>
 													</a>
 												</div>
 												<div class="portfolio-info-bx bg-primary">
@@ -514,7 +504,7 @@
 												<div class="overlay-icon align-m">
 													<a href="assets/images/portfolio/image_12.jpg"
 														class="magnific-anchor" title="Title Come Here">
-														<i class="ti-search"></i>
+														<i class="ri-image-2-line"></i>
 													</a>
 												</div>
 												<div class="portfolio-info-bx bg-primary">
@@ -539,8 +529,9 @@
 				<div class="pt-exebar">
 					<div class="container">
 						<div class="d-flex align-items-stretch">
-							<div class="pt-logo mr-auto">
-								<a href="index.html"><img src="assets/images/logo-white.png" alt="" /></a>
+							<div class="pt-logo mr-auto school-logo">
+								<a href="index.html"><img src="assets/images/icon/fatima_name_logo-removebg-preview.png"
+										alt="school_logo_white" /></a>
 							</div>
 							<div class="pt-social-link">
 								<ul class="list-inline m-a0">
@@ -605,7 +596,7 @@
 
 							</div>
 						</div>
-						<div class="col-12 col-lg-3 col-md-5 col-sm-12 footer-col-4">
+						<!-- <div class="col-12 col-lg-3 col-md-5 col-sm-12 footer-col-4">
 							<div class="widget widget_gallery gallery-grid-4">
 								<h5 class="footer-title">Our Gallery</h5>
 								<ul class="magnific-image">
@@ -627,7 +618,7 @@
 												src="assets/images/gallery/pic8.jpg" alt=""></a></li>
 								</ul>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
