Gallery Section Update

--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,7 @@
 								</li>
 								<li class="active"><a href="/contact.html">Contact Us</a>
 								</li>
-								<li><a href="/error-404.html">Gallery</a></li>
+								<li><a href="/gallery.html">Gallery</a></li>
 
 
 							</ul>
