update the gallery section

--- a/contact.html
+++ b/contact.html
@@ -119,15 +119,7 @@
 								</ul>
 							</div>
 						</div>
-						<!-- Search Box ==== -->
-						<div class="nav-search-bar">
-							<form action="#">
-								<input name="search" value="" type="text" class="form-control"
-									placeholder="Type to search">
-								<span><i class="ti-search"></i></span>
-							</form>
-							<span id="search-remove"><i class="ti-close"></i></span>
-						</div>
+
 						<!-- Navigation Menu ==== -->
 						<div class="menu-links navbar-collapse collapse justify-content-start" id="menuDropdown">
 							<div class=" logo">
@@ -249,7 +241,8 @@
 							</div>
 						</div>
 						<div class="col-lg-7 col-md-7">
-							<form class="contact-bx ajax-form" method="POST">
+							<form class="contact-bx ajax-form" method="POST"
+								action="https://www.fatimaconventschoolrangia.org/code.php">
 								<div class="ajax-message"></div>
 								<div class="heading-bx left">
 									<h2 class="title-head">Get In <span>Touch</span></h2>
@@ -405,7 +398,7 @@
 										<ul>
 											<li><a href="login.html">Login</a></li>
 
-											<li><a href="/error.html">Gallery</a></li>
+											<li><a href="/gallery.html">Gallery</a></li>
 											<li><a href="event.html">Event</a></li>
 										</ul>
 									</div>
@@ -413,7 +406,7 @@
 
 							</div>
 						</div>
-						<div class="col-12 col-lg-3 col-md-5 col-sm-12 footer-col-4">
+						<!-- <div class="col-12 col-lg-3 col-md-5 col-sm-12 footer-col-4">
 							<div class="widget widget_gallery gallery-grid-4">
 								<h5 class="footer-title">Our Gallery</h5>
 								<ul class="magnific-image">
@@ -435,7 +428,7 @@
 												src="assets/images/gallery/pic8.jpg" alt=""></a></li>
 								</ul>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
