--- a/gallery.html
+++ b/gallery.html
@@ -264,18 +264,18 @@
 							<div class="ttr-box portfolio-bx">
 								<div class="ttr-media media-ov2 media-effect">
 									<a href="javascript:void(0);">
-										<img src="assets/images/gallery/Felication_EX_Class_X_Parade.JPG"
+										<img src="assets/images/gallery/Felication_EX_Class_X_Parade.png"
 											alt="Felecation_parade">
 									</a>
 									<div class="ov-box">
 										<div class="overlay-icon align-m">
-											<a href="assets/images/gallery/Felication_EX_Class_X_Parade.JPG"
+											<a href="assets/images/gallery/Felication_EX_Class_X_Parade.png"
 												class="magnific-anchor">
 												<i class="ri-image-2-line"></i>
 											</a>
 										</div>
 										<div class="portfolio-info-bx bg-primary">
-											<h4><a href="/gallery.html">Ex Class-X Felication Parade</a>
+											<h4>Ex Class-X Felication Parade
 											</h4>
 
 										</div>
@@ -287,18 +287,18 @@
 							<div class="ttr-box portfolio-bx">
 								<div class="ttr-media media-ov2 media-effect">
 									<a href="javascript:void(0);">
-										<img src="assets/images/gallery/FELICATION_EX_CLASS_X_IMG_@.JPG"
+										<img src="assets/images/gallery/FELICATION_EX_CLASS_X_IMG_@.png"
 											alt="FELICATION_EX_CLASS_X_IMG">
 									</a>
 									<div class="ov-box">
 										<div class="overlay-icon align-m">
-											<a href="assets/images/gallery/FELICATION_EX_CLASS_X_IMG_@.JPG"
+											<a href="assets/images/gallery/FELICATION_EX_CLASS_X_IMG_@.png"
 												class="magnific-anchor" title="FELICATION_EX_CLASS_X">
 												<i class="ri-image-2-line"></i>
 											</a>
 										</div>
 										<div class="portfolio-info-bx bg-primary">
-											<h4><a href="/gallery.html">EX Class-X Felication</a></h4>
+											<h4>EX Class-X Felication</h4>
 
 										</div>
 									</div>
@@ -319,7 +319,7 @@
 											</a>
 										</div>
 										<div class="portfolio-info-bx bg-primary">
-											<h4><a href="/gallery.html">Students</a></h4>
+											<h4>Students</h4>
 
 										</div>
 									</div>
@@ -330,18 +330,18 @@
 							<div class="ttr-box portfolio-bx">
 								<div class="ttr-media media-ov2 media-effect">
 									<a href="javascript:void(0);">
-										<img src="assets/images/gallery/Felication_EX_CLASS_X_Sister.JPG"
+										<img src="assets/images/gallery/Felication_EX_CLASS_X_Sister.png"
 											alt="FELICATION_EX_CLASS_X_Sister">
 									</a>
 									<div class="ov-box">
 										<div class="overlay-icon align-m">
-											<a href="assets/images/gallery/Felication_EX_CLASS_X_Sister.JPG"
+											<a href="assets/images/gallery/Felication_EX_CLASS_X_Sister.png"
 												class="magnific-anchor" title="FELICATION_EX_CLASS_X_Sister">
 												<i class="ri-image-2-line"></i>
 											</a>
 										</div>
 										<div class="portfolio-info-bx bg-primary">
-											<h4><a href="/gallery.html">Ex CLASS-X Sister</a></h4>
+											<h4>Ex CLASS-X Sister</h4>
 
 										</div>
 									</div>
@@ -352,17 +352,18 @@
 							<div class="ttr-box portfolio-bx">
 								<div class="ttr-media media-ov2 media-effect">
 									<a href="javascript:void(0);">
-										<img src="assets/images/gallery/FELICATION_EX_CLASS_X_MRINMOY_SIR.JPG" alt="">
+										<img src="assets/images/gallery/FELICATION_EX_CLASS_X_MRINMOY_SIR.png"
+											alt="FELICATION_EX_CLASS_X_MRINMOY_SIR">
 									</a>
 									<div class="ov-box">
 										<div class="overlay-icon align-m">
-											<a href="assets/images/gallery/FELICATION_EX_CLASS_X_MRINMOY_SIR.JPG"
+											<a href="assets/images/gallery/FELICATION_EX_CLASS_X_MRINMOY_SIR.png"
 												class="magnific-anchor" title="FELICATION_EX_CLASS_X_MRINMOY_SIR.JPG">
 												<i class="ri-image-2-line"></i>
 											</a>
 										</div>
 										<div class="portfolio-info-bx bg-primary">
-											<h4><a href="/gallery.html">Ex CLASS-X</a></h4>
+											<h4>Ex CLASS-X</h4>
 
 										</div>
 									</div>
@@ -373,18 +374,18 @@
 							<div class="ttr-box portfolio-bx">
 								<div class="ttr-media media-ov2 media-effect">
 									<a href="javascript:void(0);">
-										<img src="assets/images/gallery/Independe_School_Parade.JPG"
+										<img src="assets/images/gallery/Independe_School_Parade.png"
 											alt="SCHOOL_BUILDING_FRONT_Children">
 									</a>
 									<div class="ov-box">
 										<div class="overlay-icon align-m">
-											<a href="assets/images/gallery/Independe_School_Parade.JPG"
+											<a href="assets/images/gallery/Independe_School_Parade.png"
 												class="magnific-anchor" title="Independence_School_Parade">
 												<i class="ri-image-2-line"></i>
 											</a>
 										</div>
 										<div class="portfolio-info-bx bg-primary">
-											<h4><a href="/gallery.html">Independence Day Parade</a></h4>
+											<h4>Independence Day Parade</h4>
 
 										</div>
 									</div>
@@ -395,18 +396,18 @@
 							<div class="ttr-box portfolio-bx">
 								<div class="ttr-media media-ov2 media-effect">
 									<a href="javascript:void(0);">
-										<img src="assets/images/gallery/pre_Independence_2022.JPG"
+										<img src="assets/images/gallery/pre_Independence_2022.png"
 											alt="pre_Independence_2022">
 									</a>
 									<div class="ov-box">
 										<div class="overlay-icon align-m">
-											<a href="assets/images/gallery/pre_Independence_2022.jpg"
+											<a href="assets/images/gallery/pre_Independence_2022.png"
 												class="magnific-anchor" title="pre_Independence_2022">
 												<i class="ri-image-2-line"></i>
 											</a>
 										</div>
 										<div class="portfolio-info-bx bg-primary">
-											<h4><a href="/gallery.html">Pre-Independence-Day</a></h4>
+											<h4>Pre-Independence-Day</h4>
 
 										</div>
 									</div>
@@ -417,17 +418,17 @@
 							<div class="ttr-box portfolio-bx">
 								<div class="ttr-media media-ov2 media-effect">
 									<a href="javascript:void(0);">
-										<img src="assets/images/gallery/Cycle_rally1.JPG" alt="Cycle_rally">
+										<img src="assets/images/gallery/Cycle_rally1.png" alt="Cycle_rally1">
 									</a>
 									<div class="ov-box">
 										<div class="overlay-icon align-m">
-											<a href="assets/images/gallery/Cycle_rally1.JPG" class="magnific-anchor"
-												title="Cycle_rally">
+											<a href="assets/images/gallery/Cycle_rally1.png" class="magnific-anchor"
+												title="Cycle_rally`">
 												<i class="ri-image-2-line"></i>
 											</a>
 										</div>
 										<div class="portfolio-info-bx bg-primary">
-											<h4><a href="/gallery.html">Cycle_Rally </a></h4>
+											<h4>Cycle_Rally</h4>
 
 										</div>
 									</div>
@@ -438,17 +439,17 @@
 							<div class="ttr-box portfolio-bx">
 								<div class="ttr-media media-ov2 media-effect">
 									<a href="javascript:void(0);">
-										<img src="assets/images/gallery/Cycle_rally2.JPG" alt="Cycle_rally">
+										<img src="assets/images/gallery/Cycle_rally2.png" alt="Cycle_rally2">
 									</a>
 									<div class="ov-box">
 										<div class="overlay-icon align-m">
-											<a href="assets/images/gallery/Cycle_rally2.JPG" class="magnific-anchor"
-												title="Cycle_rally">
+											<a href="assets/images/gallery/Cycle_rally2.png" class="magnific-anchor"
+												title="Cycle_rally2">
 												<i class="ri-image-2-line"></i>
 											</a>
 										</div>
 										<div class="portfolio-info-bx bg-primary">
-											<h4><a href="/gallery.html">Cycle_rally</a></h4>
+											<h4>Cycle_rally</h4>
 
 										</div>
 									</div>
@@ -459,17 +460,17 @@
 							<div class="ttr-box portfolio-bx">
 								<div class="ttr-media media-ov2 media-effect">
 									<a href="javascript:void(0);">
-										<img src="assets/images/gallery/Cycle_rally3.JPG" alt="Cycle_rally.">
+										<img src="assets/images/gallery/Cycle_rally3.png" alt="Cycle_rally3.">
 									</a>
 									<div class="ov-box">
 										<div class="overlay-icon align-m">
-											<a href="assets/images/gallery/Cycle_rally3.JPG" class="magnific-anchor"
-												title="Cycle_rally">
+											<a href="assets/images/gallery/Cycle_rally3.png" class="magnific-anchor"
+												title="Cycle_rally3">
 												<i class="ri-image-2-line"></i>
 											</a>
 										</div>
 										<div class="portfolio-info-bx bg-primary">
-											<h4><a href="/gallery.html">Cycle_rally</a></h4>
+											<h4>Cycle_rally</h4>
 
 										</div>
 									</div>
@@ -480,17 +481,17 @@
 							<div class="ttr-box portfolio-bx">
 								<div class="ttr-media media-ov2 media-effect">
 									<a href="javascript:void(0);">
-										<img src="assets/images/gallery/Cycle_rally4.JPG" alt="Cycle_rally.">
+										<img src="assets/images/gallery/Cycle_rally4.png" alt="Cycle_rally4.">
 									</a>
 									<div class="ov-box">
 										<div class="overlay-icon align-m">
-											<a href="assets/images/gallery/Cycle_rally4.JPG" class="magnific-anchor"
-												title="Cycle_rally">
+											<a href="assets/images/gallery/Cycle_rally4.png" class="magnific-anchor"
+												title="Cycle_rally4">
 												<i class="ri-image-2-line"></i>
 											</a>
 										</div>
 										<div class="portfolio-info-bx bg-primary">
-											<h4><a href="/gallery.html">Cycle_rally</a></h4>
+											<h4>Cycle_rally</h4>
 
 										</div>
 									</div>
