--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
 											<a href="/contact.html">Contact Us</a>
 										</li>
 										<li>
-											<a href="/error-404.html">Gallery</a>
+											<a href="/gallery.html">Gallery</a>
 										</li>
 										<!-- <li><a href="error-404.html">404 Page</a></li> -->
 									</ul>
@@ -524,7 +524,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-lg-3 col-md-5 col-sm-12 footer-col-4">
+					<!-- <div class="col-12 col-lg-3 col-md-5 col-sm-12 footer-col-4">
 						<div class="widget widget_gallery gallery-grid-4">
 							<h5 class="footer-title">Our Gallery</h5>
 							<ul class="magnific-image">
@@ -570,7 +570,7 @@
 								</li>
 							</ul>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
