somehow fixed the loader in gallery section

--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,8 @@
 	<!-- META ============================================= -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="keywords" content="" />
+	<meta name="keywords"
+		content="Fatima Convent Senior Secondary School Rangia, Fatima Convent School, Fatima Convent School Rangia" />
 	<meta name="author" content="Tensor_Block" />
 	<meta name="robots" content="" />
 
@@ -21,7 +22,8 @@
 
 	<!-- FAVICONS ICON ============================================= -->
 	<link rel="icon" href="assets/images/icon/favicon.ico" type="image/x-icon" />
-	<link rel="shortcut icon" type="image/x-icon" href="assets/images/icon/favicon.png" />
+	<link rel="shortcut icon" type="image/x-icon" href="assets/images/school__logo-removebg-preview.png" />
+	<link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
 
 	<!-- PAGE TITLE HERE ============================================= -->
 	<title>Fatima Convent Senior Secondary</title>
@@ -49,7 +51,7 @@
 	<link class="skin" rel="stylesheet" type="text/css" href="assets/css/color/color-1.css">
 
 	<style>
-		html.body {
+		body {
 			overflow-x: hidden;
 		}
 	</style>
@@ -59,7 +61,9 @@
 
 <body id="bg">
 	<div class="page-wraper">
-		<div id="loading-icon-bx"></div>
+		<div id="loading-icon-bx" class="preloader">
+			<div class="icon"></div>
+		</div>
 		<!-- Header Top ==== -->
 		<header class="header rs-nav">
 			<div class="top-bar">
@@ -264,12 +268,12 @@
 							<div class="ttr-box portfolio-bx">
 								<div class="ttr-media media-ov2 media-effect">
 									<a href="javascript:void(0);">
-										<img src="assets/images/gallery/Felication_EX_Class_X_Parade.png"
+										<img src="assets/images/gallery/Felication_EX_Class_X_Parade.JPG"
 											alt="Felecation_parade">
 									</a>
 									<div class="ov-box">
 										<div class="overlay-icon align-m">
-											<a href="assets/images/gallery/Felication_EX_Class_X_Parade.png"
+											<a href="assets/images/gallery/Felication_EX_Class_X_Parade.JPG"
 												class="magnific-anchor">
 												<i class="ri-image-2-line"></i>
 											</a>
@@ -287,12 +291,12 @@
 							<div class="ttr-box portfolio-bx">
 								<div class="ttr-media media-ov2 media-effect">
 									<a href="javascript:void(0);">
-										<img src="assets/images/gallery/FELICATION_EX_CLASS_X_IMG_@.png"
+										<img src="assets/images/gallery/FELICATION_EX_CLASS_X_IMG_@.JPG"
 											alt="FELICATION_EX_CLASS_X_IMG">
 									</a>
 									<div class="ov-box">
 										<div class="overlay-icon align-m">
-											<a href="assets/images/gallery/FELICATION_EX_CLASS_X_IMG_@.png"
+											<a href="assets/images/gallery/FELICATION_EX_CLASS_X_IMG_@.JPG"
 												class="magnific-anchor" title="FELICATION_EX_CLASS_X">
 												<i class="ri-image-2-line"></i>
 											</a>
@@ -330,12 +334,12 @@
 							<div class="ttr-box portfolio-bx">
 								<div class="ttr-media media-ov2 media-effect">
 									<a href="javascript:void(0);">
-										<img src="assets/images/gallery/Felication_EX_CLASS_X_Sister.png"
+										<img src="assets/images/gallery/Felication_EX_CLASS_X_Sister.JPG"
 											alt="FELICATION_EX_CLASS_X_Sister">
 									</a>
 									<div class="ov-box">
 										<div class="overlay-icon align-m">
-											<a href="assets/images/gallery/Felication_EX_CLASS_X_Sister.png"
+											<a href="assets/images/gallery/Felication_EX_CLASS_X_Sister.JPG"
 												class="magnific-anchor" title="FELICATION_EX_CLASS_X_Sister">
 												<i class="ri-image-2-line"></i>
 											</a>
@@ -352,12 +356,12 @@
 							<div class="ttr-box portfolio-bx">
 								<div class="ttr-media media-ov2 media-effect">
 									<a href="javascript:void(0);">
-										<img src="assets/images/gallery/FELICATION_EX_CLASS_X_MRINMOY_SIR.png"
+										<img src="assets/images/gallery/FELICATION_EX_CLASS_X_MRINMOY_SIR.JPG"
 											alt="FELICATION_EX_CLASS_X_MRINMOY_SIR">
 									</a>
 									<div class="ov-box">
 										<div class="overlay-icon align-m">
-											<a href="assets/images/gallery/FELICATION_EX_CLASS_X_MRINMOY_SIR.png"
+											<a href="assets/images/gallery/FELICATION_EX_CLASS_X_MRINMOY_SIR.JPG"
 												class="magnific-anchor" title="FELICATION_EX_CLASS_X_MRINMOY_SIR.JPG">
 												<i class="ri-image-2-line"></i>
 											</a>
@@ -374,12 +378,12 @@
 							<div class="ttr-box portfolio-bx">
 								<div class="ttr-media media-ov2 media-effect">
 									<a href="javascript:void(0);">
-										<img src="assets/images/gallery/Independe_School_Parade.png"
+										<img src="assets/images/gallery/Independe_School_Parade.JPG"
 											alt="SCHOOL_BUILDING_FRONT_Children">
 									</a>
 									<div class="ov-box">
 										<div class="overlay-icon align-m">
-											<a href="assets/images/gallery/Independe_School_Parade.png"
+											<a href="assets/images/gallery/Independe_School_Parade.JPG"
 												class="magnific-anchor" title="Independence_School_Parade">
 												<i class="ri-image-2-line"></i>
 											</a>
@@ -396,12 +400,12 @@
 							<div class="ttr-box portfolio-bx">
 								<div class="ttr-media media-ov2 media-effect">
 									<a href="javascript:void(0);">
-										<img src="assets/images/gallery/pre_Independence_2022.png"
+										<img src="assets/images/gallery/pre_Independence_2022.JPG"
 											alt="pre_Independence_2022">
 									</a>
 									<div class="ov-box">
 										<div class="overlay-icon align-m">
-											<a href="assets/images/gallery/pre_Independence_2022.png"
+											<a href="assets/images/gallery/pre_Independence_2022.JPG"
 												class="magnific-anchor" title="pre_Independence_2022">
 												<i class="ri-image-2-line"></i>
 											</a>
@@ -418,11 +422,11 @@
 							<div class="ttr-box portfolio-bx">
 								<div class="ttr-media media-ov2 media-effect">
 									<a href="javascript:void(0);">
-										<img src="assets/images/gallery/Cycle_rally1.png" alt="Cycle_rally1">
+										<img src="assets/images/gallery/Cycle_rally1.JPG" alt="Cycle_rally1">
 									</a>
 									<div class="ov-box">
 										<div class="overlay-icon align-m">
-											<a href="assets/images/gallery/Cycle_rally1.png" class="magnific-anchor"
+											<a href="assets/images/gallery/Cycle_rally1.JPG" class="magnific-anchor"
 												title="Cycle_rally`">
 												<i class="ri-image-2-line"></i>
 											</a>
