--- a/index.html
+++ b/index.html
@@ -975,12 +975,12 @@
 										<div class="ttr-box portfolio-bx">
 											<div class="ttr-media media-ov2 media-effect">
 												<a href="javascript:void(0);">
-													<img src="assets/images/gallery/Felication_X_Students.jpg"
+													<img src="assets/images/gallery/Felication_X_Students.JPG"
 														alt="Students">
 												</a>
 												<div class="ov-box">
 													<div class="overlay-icon align-m">
-														<a href="assets/images/gallery/Felication_X_Students.jpg"
+														<a href="assets/images/gallery/Felication_X_Students.JPG"
 															class="magnific-anchor"
 															title="FELICATION_EX_CLASS_X_STUDENTS">
 															<i class="ri-image-2-line"></i>
